kubernetes/apps/paperless-ngx/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx-service
  labels:
    app: paperless-ngx
spec:
  type: ClusterIP
  selector:
    app: paperless-ngx
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: http
